parser object and add debug infomation in cmake

--- a/tutorial06/CMakeLists.txt
+++ b/tutorial06/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required (VERSION 2.6)
 project (leptjson_test C)
 
+SET(CMAKE_BUILD_TYPE "Debug")
+SET(CMAKE_C_FLAGS_DEBUG "$ENV{CFLAGS} -O0 -Wall -g -ggdb")
 if (CMAKE_C_COMPILER_ID MATCHES "GNU|Clang")
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -ansi -pedantic -Wall")
 endif()
